// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectInputComponent renders 1`] = `
<tf-multi-select-input>
  <mock:shadow-root>
    <label class="multi-select-input">
      <span class="multi-select-input__label"></span>
      <div class="multi-select-input__inputs">
        <div class="multi-select-input__col">
          <h4 class="multi-select-input__list-header">
            Not Assigned
          </h4>
          <ul class="multi-select-input__scroll"></ul>
        </div>
        <div class="multi-select-input__col">
          <h4 class="multi-select-input__list-header">
            Assigned
          </h4>
          <ul class="multi-select-input__scroll"></ul>
        </div>
      </div>
      <p class="multi-select-input__hint"></p>
    </label>
  </mock:shadow-root>
</tf-multi-select-input>
`;

exports[`MultiSelectInputComponent renders with values 1`] = `
<tf-multi-select-input>
  <mock:shadow-root>
    <label class="multi-select-input">
      <span class="multi-select-input__label">
        First
      </span>
      <div class="multi-select-input__inputs">
        <div class="multi-select-input__col">
          <h4 class="multi-select-input__list-header">
            Not Assigned
          </h4>
          <ul class="multi-select-input__scroll">
            <li class="multi-select-input__item" draggable="true" title="First Value">
              First Value
            </li>
            <li class="multi-select-input__item" draggable="true" title="Third Value">
              Third Value
            </li>
          </ul>
        </div>
        <div class="multi-select-input__col">
          <h4 class="multi-select-input__list-header">
            Assigned
          </h4>
          <ul class="multi-select-input__scroll">
            <li class="multi-select-input__item" draggable="true" title="Second Value"></li>
            <li class="multi-select-input__item" draggable="true" title="Fourth Value"></li>
          </ul>
        </div>
      </div>
      <p class="multi-select-input__hint"></p>
    </label>
  </mock:shadow-root>
</tf-multi-select-input>
`;
